--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,40 @@
+/* theme config
+*/
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --primary-blue: #5A87E9;
+  --secondary-blue: #4B67A6;
+  --primary-orange: #FFA585;
+  --text-white-color: #fff;
+  --text-black-color: #000;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+
+/* basic reset */
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box; 
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+html, body{
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    width: 100vw;
+    height: 100vh;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+ul, ol, li {
+    list-style: none;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+a{
+    text-decoration: none;
+    color: inherit;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+button {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
 }
