feat(/components/NavMenu): Created NavMenu structure.

--- a/src/components/AppHeader/AppHeader.module.scss
+++ b/src/components/AppHeader/AppHeader.module.scss
@@ -14,9 +14,10 @@
 }
 
 .logo {
-  font-size: 1.8rem;
+  font-size: 2.5rem;
   font-weight: bold;
   color: var(--text-white-color);
+  font-family: var(--font-saira-stencil);
   white-space: nowrap;
 }
 
