--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,3 +1,26 @@
 .background {
   background-color: var(--secondary-blue);
+  min-height: 90.3vh;
+}
+
+.notFoundBox {
+  width: 100%;
+  text-align: center;
+  padding: 2rem;
+  color: var(--text-white-color);
+  margin-top: 2rem;
+  font-size: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+
+.sectionProducts{
+  margin: 0 10rem;
+
+  @media (max-width: 1285px) {
+    margin: 0;
+  }
 }
