--- a/src/components/ProductCard/ProductCard.module.scss
+++ b/src/components/ProductCard/ProductCard.module.scss
@@ -4,18 +4,57 @@
   height: 378px;
   border-radius: 8px;
   overflow: hidden;
-  background: white;
-  color: black;
+  background: var(--text-white-color);
+  color: var(--text-black-color);
   position: relative;
   margin: 0 auto;
-}
 
-.imageWrapper {
-  width: 100%;
-  height: 300px;
-  position: relative;
+  @media (max-width: 768px) {
+    height: 325px;
+  }
 }
 
 .image {
   object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 300px;
+
+  @media (max-width: 768px) {
+    height: 230px;
+  }
+}
+
+.info {
+  margin: 0 12px;
+
+  @media (max-width: 768px) {
+    height: 85px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+}
+
+.name {
+  font-family: var(--font-saira);
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0%;
+  vertical-align: middle;
+  color: var(--text-gray-secondary-color);
+  border-bottom: 1px solid #DCE2E5;
+  padding-bottom: 8px;
+
+}
+
+.price {
+  font-family: var(--font-saira);
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 150%;
+  letter-spacing: 0%;
+  vertical-align: middle;
+  color: var(--text-black-color);
 }
